Initial commit: Add website files

--- a/cotton-cellulose.html
+++ b/cotton-cellulose.html
@@ -401,7 +401,7 @@
   </div>
 
   <div style="display: flex; justify-content: center; width: 100%;">
-    <div class="container content-wrap" style="display: flex; gap: 30px; padding: 20px; margin-top: 10px;width: 80%;">
+    <div style="display: flex; gap: 0px; padding: 0px; width: 80%;">
     
       <div class="rsidebar span_1_of_left">
         <section class="sky-form">
@@ -434,16 +434,16 @@
       <div class="col-md-9 ">
         <div class="box1">
           <!-- 上面的大图 -->
-          <div class="image-box top-image">
-            <img src="images/cotton/co1.jpg">
+          <div class="image-box top-image" style="margin:0;padding:0;">
+            <img src="images/cotton/co1.jpg" style="width:102%;">
           </div>
           <div class="image-box bottom-image" style="margin:0;padding:0;">
-            <img src="images/cotton/co_mix.jpg" style="width:100%;display:block;margin:0 auto;">
+            <img src="images/cotton/co_mix.jpg" style="width:102%;">
           </div>
         </div>
         <div class="box2">
           <div class="right-section" style="display: flex; flex-direction: column;">
-            <div class="text-content" style="margin-bottom: 40px;">
+            <div class="text-content" style="margin-bottom: 40px;width:103%;">
               <h4 style="font-size: 16px; margin-left: 35px;">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 Around the worlds, many countries still use cotton cellulose to make their banknote and security paper. by
@@ -454,13 +454,13 @@
                 <li>Cotton Linter Pulp</li>
               </ul>
             </div>
-            <div class="image-content"">
-              <img src="images/bank/bank_mix.png" alt="bank_mix" class="middle-image" style="width:100%;height:100%;">
+            <div class="image-content">
+              <img src="images/bank/bank_mix.png" style="width:102%;height:102%;">
             </div>
           </div>
         </div>
         <div class="box3">
-          <h4 style="font-size: 16px;">
+          <h4 style="font-size: 16px;width:103%;">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There are three major grades of Cotton Linter for producing
             Nitrocellulose:
           </h4>
@@ -469,20 +469,20 @@
             <li>Nitrocellulose Propellant Grade</li>
             <li>Nitrocellulose Dynamite Grade</li>
           </ul>
-          <div class="container2">
-            <img src="images/nitro/n_mix.png" style="width:100%;height:auto;display:block;">
+          <div style="margin-top: 30px;">
+            <img src="images/nitro/n_mix.png" style="width:103%;height:103%;">
           </div>
         </div>
-        <div class="box5" style="width:100%;padding:0;margin:0;display:flex;flex-direction:column;">
-          <div class="box5-text" style="margin-bottom:20px;width:100%;">
+        <div class="box5" >
+          <div class="box5-text" style="margin-bottom:20px;width:103%;">
             <h4 style="font-size: 16px; ">
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cotton linter is used to produce a wide range of products, such as CMC,
               MC, HPMC, HEC, AC, and viscose fibers,
               etc. These modified cellulose are used everywhere in our daily life.
             </h4>
           </div>
-          <div class="box5-img" style="width:100%;">
-            <img src="images/other/other.png" alt="other" style="width:100%;height:auto;display:block;">
+          <div class="box5-img" >
+            <img src="images/other/other.png" style="width:104%;height:150%">
           </div>
         </div>
   
